// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageBar render: full pagination 1`] = `
<DocumentFragment>
  <div
    class="row align-items-center mb-3 no-gutters"
  >
    <div
      class="col-12 col-lg-4 order-2 order-lg-1 text-left mb-3"
    >
      <ul
        class="pagination mb-0 justify-content-center justify-content-lg-start"
      >
        <li
          class="page-item"
        >
          <button
            aria-label="Previous"
            class="page-link"
          >
            <span
              aria-hidden="true"
            >
              «
            </span>
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            8
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            9
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            10
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            11
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            12
          </button>
        </li>
        <li
          class="page-item active"
        >
          <button
            class="page-link"
          >
            13
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            14
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            15
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            16
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            17
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            aria-label="Next"
            class="page-link"
          >
            <span
              aria-hidden="true"
            >
              »
            </span>
          </button>
        </li>
      </ul>
    </div>
    <div
      class="col-12 col-lg-4 order-1 order-lg-2 text-center mb-3"
    >
      <span>
        Showing 
        <b>
          121-130
        </b>
         of 
        <b>
          500
        </b>
         items.
      </span>
    </div>
    <div
      class="col-2 offset-5 col-lg-1 order-3 offset-lg-3 text-right mb-3"
    >
      <select
        class="form-control"
      >
        <option
          value="10"
        >
          10
        </option>
        <option
          value="20"
        >
          20
        </option>
        <option
          value="30"
        >
          30
        </option>
      </select>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageBar render: short prev/next page switcher 1`] = `
<DocumentFragment>
  <div
    class="row align-items-center mb-3 no-gutters"
  >
    <div
      class="col-12 col-lg-4 order-2 order-lg-1 text-left mb-3"
    >
      <ul
        class="pagination mb-0 justify-content-center justify-content-lg-start"
      >
        <li
          class="page-item"
        >
          <button
            aria-label="Previous"
            class="page-link"
          >
            <span
              aria-hidden="true"
            >
              «
            </span>
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            aria-label="Next"
            class="page-link"
          >
            <span
              aria-hidden="true"
            >
              »
            </span>
          </button>
        </li>
      </ul>
    </div>
    <div
      class="col-12 col-lg-4 order-1 order-lg-2 text-center mb-3"
    />
    <div
      class="col-2 offset-5 col-lg-1 order-3 offset-lg-3 text-right mb-3"
    >
      <select
        class="form-control"
      >
        <option
          value="10"
        >
          10
        </option>
        <option
          value="20"
        >
          20
        </option>
        <option
          value="30"
        >
          30
        </option>
      </select>
    </div>
  </div>
</DocumentFragment>
`;
